[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/github_issues_bugtracker/issues_api.py" type="Script" id=1]
[ext_resource path="res://assets/themes/new_gui/neon.tres" type="Theme" id=2]
[ext_resource path="res://addons/github_issues_bugtracker/IssuePrompt.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="IssueRequest" type="HTTPRequest" parent="."]

[node name="IssuePrompt" type="WindowDialog" parent="."]
visible = true
margin_top = -3.0
margin_right = 904.0
margin_bottom = 552.0
window_title = "New Issue"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="TextEdit" parent="IssuePrompt"]
anchor_left = 0.001
anchor_top = 0.175
anchor_right = 1.001
anchor_bottom = 0.658
margin_left = 0.096
margin_top = -0.125008
margin_right = 0.0959473
margin_bottom = -0.190033
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="IssuePrompt"]
anchor_top = 0.73
anchor_right = 1.0
anchor_bottom = 0.944
margin_left = 25.0
margin_top = -0.150024
margin_right = -25.0
margin_bottom = 0.0799561
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Send" type="Button" parent="IssuePrompt"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -27.0
margin_right = 24.0
size_flags_horizontal = 6
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="IssuePrompt"]
anchor_top = 0.659
anchor_right = 1.0
anchor_bottom = 0.726
margin_top = 0.254974
margin_bottom = 0.0700073
text = "Add tags:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="IssuePrompt"]
anchor_top = 0.659
anchor_right = 1.0
anchor_bottom = 0.726
margin_left = 1.0
margin_top = -302.745
margin_right = 1.0
margin_bottom = -302.93
text = "Add description:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="IssuePrompt"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -452.0
margin_right = 452.0
margin_bottom = 37.0
text = "Add title:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiitle" type="LineEdit" parent="IssuePrompt"]
anchor_top = 0.067
anchor_right = 1.0
anchor_bottom = 0.101
margin_left = 1.0
margin_top = -3.185
margin_right = 1.0
margin_bottom = 4.945

[node name="LabelsRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="IssueRequest" to="." method="_on_IssueRequest_request_completed"]
[connection signal="pressed" from="IssuePrompt/Send" to="IssuePrompt" method="_on_Send_pressed"]
[connection signal="request_completed" from="LabelsRequest" to="IssuePrompt" method="_on_LabelsRequest_request_completed"]
